--- a/README
+++ b/README
@@ -1,1 +1,7 @@
-Scripts I've developed(or I'm developing) for RE tasks using [LIEF](https://github.com/lief-project/LIEF).
+Scripts used for reverse engineering, malware analysis.
+
+`elfie.py`       - display (basic) info about an ELF, similar to `readelf`.
+
+`elforensics.py` - check ELF for entry point hooks, RWX sections, CTORS & GOT & PLT hooks, function prologue trampolines.
+
+`dololi`         - unfinished, the idea is to automatically generate an executable that calls exports from DLL(s).
